--- a/exhibitions.html
+++ b/exhibitions.html
@@ -162,7 +162,7 @@
                   Our more than 1000 unique exhibitions are divided into 5 main
                   spaces for you to explore:
                 </p>
-                <hr />
+                <!-- <hr /> -->
                 <ul class="dropdown-list">
                   <li>Cosmology</li>
                   <li>Evolution</li>
@@ -182,7 +182,7 @@
                   Here you can learn more about what we can offer, wheter you
                   are a:
                 </p>
-                <hr />
+                <!-- <hr /> -->
                 <ul class="dropdown-list">
                   <li>Kid who would like to join one of our clubs.</li>
                   <li>
@@ -205,7 +205,7 @@
                   In order for us to create the best museum possible we need
                   your contribution, support us through:
                 </p>
-                <hr />
+                <!-- <hr /> -->
                 <ul class="dropdown-list">
                   <li>Donations</li>
                   <li>Volunteering</li>
@@ -220,7 +220,7 @@
             <a href="visit.html">
               <div id="visit-dropdown" class="dropdown-info">
                 <p class="header">All you need to know about:</p>
-                <hr />
+                <!-- <hr /> -->
                 <ul class="dropdown-list">
                   <li>Admission</li>
                   <li>Location</li>
@@ -306,9 +306,9 @@
                 </p>
                 <p>
                   Discover the origins of life on this planet and how the
-                  species we know today have evolved our time. You can also meet
-                  a few of the creatures who didn’t survive, including our
-                  Woolly Mammoth, the Dodos, and a number of dinosaurs too.
+                  species we know today have evolved. Also meet a few of the
+                  creatures who didn’t survive, including our Woolly Mammoth,
+                  and a number of dinosaurs.
                 </p>
               </div>
             </div>
@@ -643,6 +643,5 @@
       <p id="copyright">Community Science Museum 2020</p>
     </footer>
     <script src="js/in_common.js"></script>
-    <script src="js/index.js"></script>
   </body>
 </html>
