--- a/about_us.html
+++ b/about_us.html
@@ -6,8 +6,8 @@
       accessible to all | Learn more about our museums vision and ambition
     </title>
     <meta
-      name="decription"
-      content="Let us explore together: Come join us at the Community Science Museum where we're commited to making secience accessible to all. 
+      name="description"
+      content="Let us explore together: Come join us at the Community Science Museum where we're committed to making science accessible to all. 
       We believe science should be fun and we want to create a space where everyone can experience the wonders of our discoveries."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,7 +23,7 @@
       href="images/icons/CSM favicon.png"
     />
     <!-- Hotjar Tracking Code for https://cms-bergen.netlify.app/ -->
-    <script>
+    <!-- <script>
       (function (h, o, t, j, a, r) {
         h.hj =
           h.hj ||
@@ -37,7 +37,7 @@
         r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
         a.appendChild(r);
       })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
+    </script> -->
   </head>
 
   <body>
@@ -179,7 +179,7 @@
             <a href="explore.html">
               <div id="explore-dropdown" class="dropdown-info">
                 <p class="header">
-                  Here you can learn more about what we can offer, wheter you
+                  Here you can learn more about what we can offer, whether you
                   are a:
                 </p>
                 <!-- <hr /> -->
@@ -249,12 +249,12 @@
             <img
               class="mobile"
               src="images\together.jpg"
-              alt="A 10 year old white boy and a black girl who is a couple of years younger is studing an mechanical exhibit in a glass monter. They are both holding their hands towards the glass, and the boy is point to something of interest."
+              alt="A 10 year old white boy and a black girl who is a couple of years younger is studying an mechanical exhibit in a glass cabinet. They are both holding their hands towards the glass, and the boy is point to something of interest."
             />
             <img
               class="large-screen"
               src="images\together_large.jpg"
-              alt="A 10 year old white boy and a black girl who is a couple of years younger is studing an mechanical exhibit in a glass monter. They are both holding their hands towards the glass, and the boy is point to something of interest."
+              alt="A 10 year old white boy and a black girl who is a couple of years younger is studying an mechanical exhibit in a glass cabinet. They are both holding their hands towards the glass, and the boy is point to something of interest."
             />
           </figure>
           <div class="vision item-3">
@@ -296,7 +296,7 @@
           <a href="contact.html"><p class="button">GET IN TOUCH</p></a>
         </div>
         <section class="tourguides">
-          <h4>Meet Our Passonate Tourguides</h4>
+          <h4>Meet Our Passionate Tour Guides</h4>
           <div class="image-wrapper">
             <div class="tourguide">
               <img
