--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
       Community Science Museum - Bergen: Our museums contact Page and FAQ
     </title>
     <meta
-      name="decription"
+      name="description"
       content="Get in touch with us with questions regarding bookings, 
       how to join a club, how to support us, how to bring your students and more. 
       This page also contains a FAQ section where you will find answers to common questions."
@@ -23,7 +23,7 @@
       href="images/icons/CSM favicon.png"
     />
     <!-- Hotjar Tracking Code for https://cms-bergen.netlify.app/ -->
-    <script>
+    <!-- <script>
       (function (h, o, t, j, a, r) {
         h.hj =
           h.hj ||
@@ -37,7 +37,7 @@
         r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
         a.appendChild(r);
       })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
+    </script> -->
   </head>
 
   <body>
@@ -179,7 +179,7 @@
             <a href="explore.html">
               <div id="explore-dropdown" class="dropdown-info">
                 <p class="header">
-                  Here you can learn more about what we can offer, wheter you
+                  Here you can learn more about what we can offer, whether you
                   are a:
                 </p>
                 <!-- <hr /> -->
@@ -209,7 +209,7 @@
                 <ul class="dropdown-list">
                   <li>Donations</li>
                   <li>Volunteering</li>
-                  <li>Intenships</li>
+                  <li>Internships</li>
                 </ul>
                 <!-- <p class="learn-more">Click to learn more...</p> -->
               </div>
@@ -279,13 +279,13 @@
                 <select name="tickets" id="option" class="form">
                   <option value="1">I would like to book a group tour</option>
                   <option value="1">I have a question</option>
-                  <option value="1">Join a childrens club</option>
+                  <option value="1">Join a children's club</option>
                   <option value="1">I want to donate</option>
                   <option value="1">
                     I'm a teacher who want to bring my students
                   </option>
                   <option value="1">
-                    I'm a reasearcher and want to get in touch
+                    I'm a researcher and want to get in touch
                   </option>
                   <option value="1">I would like to join as a volunteer</option>
                   <option value="1">
