--- a/explore.html
+++ b/explore.html
@@ -6,7 +6,7 @@
       more about science in a fun way?
     </title>
     <meta
-      name="decription"
+      name="description"
       content="
       Come on down to our new museum in Bergen and make us a visit. There is plenty to see and do; 
       and you can also join one of our clubs that offer an experiment driven exploring in weekends and holidays.
@@ -26,7 +26,7 @@
       href="images/icons/CSM favicon.png"
     />
     <!-- Hotjar Tracking Code for https://cms-bergen.netlify.app/ -->
-    <script>
+    <!-- <script>
       (function (h, o, t, j, a, r) {
         h.hj =
           h.hj ||
@@ -40,7 +40,7 @@
         r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
         a.appendChild(r);
       })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
+    </script> -->
   </head>
 
   <body>
@@ -182,7 +182,7 @@
             <a href="explore.html">
               <div id="explore-dropdown" class="dropdown-info">
                 <p class="header">
-                  Here you can learn more about what we can offer, wheter you
+                  Here you can learn more about what we can offer, whether you
                   are a:
                 </p>
                 <!-- <hr /> -->
@@ -212,7 +212,7 @@
                 <ul class="dropdown-list">
                   <li>Donations</li>
                   <li>Volunteering</li>
-                  <li>Intenships</li>
+                  <li>Internships</li>
                 </ul>
                 <!-- <p class="learn-more">Click to learn more...</p> -->
               </div>
@@ -261,7 +261,7 @@
           </div>
           <div class="margins" id="item-2">
             <div id="club-anchor"></div>
-            <h4 class="club">Join a Childrens Club</h4>
+            <h4 class="club">Join a Children's Club</h4>
             <h5>Young Stars Club</h5>
             <p>
               We also have the <em>Young Stars Club</em> which meets once a week
