--- a/get_involved.html
+++ b/get_involved.html
@@ -6,10 +6,10 @@
       Because we need you
     </title>
     <meta
-      name="decription"
+      name="description"
       content="There are various ways you can Support our museum. 
       Donations are very welcome and are an important way we keep this museum open and accessible to the whole community. 
-      You van also support us by becoming a volunteer or by working here through an intenship"
+      You van also support us by becoming a volunteer or by working here through an internship"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
@@ -24,7 +24,7 @@
       href="images/icons/CSM favicon.png"
     />
     <!-- Hotjar Tracking Code for https://cms-bergen.netlify.app/ -->
-    <script>
+    <!-- <script>
       (function (h, o, t, j, a, r) {
         h.hj =
           h.hj ||
@@ -38,7 +38,7 @@
         r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
         a.appendChild(r);
       })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
+    </script> -->
   </head>
 
   <body>
@@ -180,7 +180,7 @@
             <a href="explore.html">
               <div id="explore-dropdown" class="dropdown-info">
                 <p class="header">
-                  Here you can learn more about what we can offer, wheter you
+                  Here you can learn more about what we can offer, whether you
                   are a:
                 </p>
                 <!-- <hr /> -->
@@ -208,7 +208,7 @@
                 <ul class="dropdown-list">
                   <li>Donations</li>
                   <li>Volunteering</li>
-                  <li>Intenships</li>
+                  <li>Internships</li>
                 </ul>
                 <!-- <p class="learn-more">Click to learn more...</p> -->
               </div>
