--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
       exhibitions.
     </title>
     <meta
-      name="decription"
-      content="We have more than 1000 science exhibtions divided into 5 spaces for you to explore and ineract with. 
-      Wheter you wan't to learn more about Cosmology, Evolution, Bilology and Medicine, Robotics and AI or Ecology in a fun and intruiging way, 
+      name="description"
+      content="We have more than 1000 science exhibitions divided into 5 spaces for you to explore and interact with. 
+      Whether you wan't to learn more about Cosmology, Evolution, Biology and Medicine, Robotics and AI or Ecology in a fun and intriguing way, 
       our museum has something on offer for school kids of all ages. 
       If you are curious and wan't do dig deeper into science you are welcome to join one of our science clubs. 
       We also have a variety of exciting special events on offer all year round."
@@ -27,7 +27,7 @@
       href="images/icons/CSM favicon.png"
     />
     <!-- Hotjar Tracking Code for https://cms-bergen.netlify.app/ -->
-    <script>
+    <!-- <script>
       (function (h, o, t, j, a, r) {
         h.hj =
           h.hj ||
@@ -41,7 +41,7 @@
         r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
         a.appendChild(r);
       })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
+    </script> -->
   </head>
 
   <body>
@@ -183,7 +183,7 @@
             <a href="explore.html">
               <div id="explore-dropdown" class="dropdown-info">
                 <p class="header">
-                  Here you can learn more about what we can offer, wheter you
+                  Here you can learn more about what we can offer, whether you
                   are a:
                 </p>
                 <!-- <hr /> -->
@@ -259,7 +259,7 @@
               <div class="arrow-up"></div>
               <h3>Let Us Explore Together</h3>
               <div id="about">
-                <p>Learn more ABOUT US and our VISON</p>
+                <p>Learn more ABOUT US and our VISION</p>
                 <span class="fa fa-arrow-circle-right"></span>
               </div>
               <div class="arrow-down"></div>
@@ -342,7 +342,7 @@
                     <img
                       class="slider-image"
                       src="images\t-rex.jpg"
-                      alt="Close up photo of the head of a of gaping T-Rex sceleton, exposing all it's razorsharp teeth"
+                      alt="Close up photo of the head of a of gaping T-Rex skeleton, exposing all it's razor-sharp teeth"
                     />
                   </figure>
                   <div class="news">
@@ -375,7 +375,7 @@
                       <h5>Visiting Professor Of Aeronautics</h5>
                       <p>
                         It is our pleasure to announce that Professor Sheila
-                        Widnall from the Massachusetts Institue of Technology
+                        Widnall from the Massachusetts Institute of Technology
                         will visit our museum.
                       </p>
                       <p>
@@ -452,7 +452,7 @@
               <a href="explore.html#club-anchor"
                 ><img
                   src="images\club_1.jpg"
-                  alt="A group of five children aged 8-9 is watching a chemestry experiment involving expanding blue scum, with great excitement."
+                  alt="A group of five children aged 8-9 is watching a chemistry experiment involving expanding blue scum, with great excitement."
                 />
                 <figcaption class="clubs">The Young Stars Club</figcaption></a
               >
@@ -461,7 +461,7 @@
               <a href="explore.html#club-anchor"
                 ><img
                   src="images\club_2.jpg"
-                  alt="A boy and a girl aged 12 are in full consetration when they are collaberating to build a small robot-machine on wheels."
+                  alt="A boy and a girl aged 12 are in full concentration when they are collaborating to build a small robot-machine on wheels."
                 />
                 <figcaption class="clubs">The Holiday Club</figcaption></a
               >
