--- a/visit.html
+++ b/visit.html
@@ -6,12 +6,12 @@
       wan't to make us an visit.
     </title>
     <meta
-      name="decription"
+      name="description"
       content="You will find the Community Science Museum right in the center of Bergen in Nygardsgaten 112. 
       Entrance is free for all, and we charge only 70NOK for a guided tour.
       We are open all days of the week except on monday. 
       The museum has good accessibility, and we have a cafe where you can get lunches, soft drinks, 
-      coffee snacks and more as well as a shop offering great gifts and acctivity packs: "
+      coffee snacks and more as well as a shop offering great gifts and activity packs: "
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
@@ -26,7 +26,7 @@
       href="images/icons/CSM favicon.png"
     />
     <!-- Hotjar Tracking Code for https://cms-bergen.netlify.app/ -->
-    <script>
+    <!-- <script>
       (function (h, o, t, j, a, r) {
         h.hj =
           h.hj ||
@@ -40,7 +40,7 @@
         r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
         a.appendChild(r);
       })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
+    </script> -->
   </head>
 
   <body>
@@ -182,7 +182,7 @@
             <a href="explore.html">
               <div id="explore-dropdown" class="dropdown-info">
                 <p class="header">
-                  Here you can learn more about what we can offer, wheter you
+                  Here you can learn more about what we can offer, whether you
                   are a:
                 </p>
                 <!-- <hr /> -->
@@ -212,7 +212,7 @@
                 <ul class="dropdown-list">
                   <li>Donations</li>
                   <li>Volunteering</li>
-                  <li>Intenships</li>
+                  <li>Internships</li>
                 </ul>
                 <!-- <p class="learn-more">Click to learn more...</p> -->
               </div>
@@ -257,7 +257,7 @@
               guide of the museum.
             </p>
             <p>
-              If you would like to organise a guided tour for your group of 6 or
+              If you would like to organize a guided tour for your group of 6 or
               more people, please <a href="contact.html">contact</a> us to
               arrange the tour.
             </p>
@@ -266,7 +266,7 @@
               or at the site.
             </p>
             <p>
-              If you want to book a place in a special event or join a childrens
+              If you want to book a place in a special event or join a children's
               club, please <a href="contact.html">contact</a> us.
             </p>
             <p>
