--- a/exhibitions.html
+++ b/exhibitions.html
@@ -7,10 +7,10 @@
       - Robotics and AI - Ecology.
     </title>
     <meta
-      name="decription"
+      name="description"
       content="Learn more about each category and get a sneak peek of some of our most popular exhibits on offer. 
     When you enter the space for robotics you will be greeted by Pepper the Robot, a human size robot you can shake hands with and talk to. 
-    We also have a real-life sized exhibit of the moonlanding, and much much more"
+    We also have a real-life sized exhibit of the moon landing, and much much more"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
@@ -25,7 +25,7 @@
       href="images/icons/CSM favicon.png"
     />
     <!-- Hotjar Tracking Code for https://cms-bergen.netlify.app/ -->
-    <script>
+    <!-- <script>
       (function (h, o, t, j, a, r) {
         h.hj =
           h.hj ||
@@ -39,7 +39,7 @@
         r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
         a.appendChild(r);
       })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
+    </script> -->
   </head>
 
   <body>
@@ -179,7 +179,7 @@
             <a href="explore.html">
               <div id="explore-dropdown" class="dropdown-info">
                 <p class="header">
-                  Here you can learn more about what we can offer, wheter you
+                  Here you can learn more about what we can offer, whether you
                   are a:
                 </p>
                 <!-- <hr /> -->
@@ -209,7 +209,7 @@
                 <ul class="dropdown-list">
                   <li>Donations</li>
                   <li>Volunteering</li>
-                  <li>Intenships</li>
+                  <li>Internships</li>
                 </ul>
                 <!-- <p class="learn-more">Click to learn more...</p> -->
               </div>
