explore page improved

--- a/contact.html
+++ b/contact.html
@@ -141,95 +141,26 @@
       </div>
       <nav aria-label="menu" class="menu">
         <ul class="mobile-menu">
-          <label class="hamburger-label" for="hamburger-menu"
-            ><span class="fa fa-bars"></span>
-            <p id="menu">MENU</p></label
-          >
+          <label class="hamburger-label" for="hamburger-menu"><span class="fa fa-bars"></span>
+          </label>
           <input type="checkbox" id="hamburger-menu" />
-          <li><a href="exhibitions.html">EXHIBITIONS</a></li>
-          <li><a href="explore.html">EXPLORE</a></li>
-          <li><a href="get_involved.html">GET INVOLVED</a></li>
-          <li id="visit"><a href="visit.html">VISIT</a></li>
+          <li><a href="exhibitions.html">Exhibitions</a></li>
+          <li><a href="explore.html">Explore</a></li>
+          <li><a href="get_involved.html">Get involved</a></li>
+          <li id="visit"><a href="visit.html">Visit</a></li>
         </ul>
-        <ul class="large-screen">
-          <li id="exhibition-wrapper" class="info-wrapper">
-            <a href="exhibitions.html" class="link-box1 inactive"
-              >EXHIBITIONS</a
-            >
-            <a href="exhibitions.html">
-              <div id="exhibitions-dropdown" class="dropdown-info">
-                <p class="header">
-                  Our more than 1000 unique exhibitions are divided into 5 main
-                  spaces for you to explore:
-                </p>
-                <!-- <hr /> -->
-                <ul class="dropdown-list">
-                  <li>Cosmology</li>
-                  <li>Evolution</li>
-                  <li>Biology & Medicine</li>
-                  <li>Robotics & AI</li>
-                  <li>Ecology</li>
-                </ul>
-                <!-- <p class="learn-more">Click to Learn More...</p> -->
-              </div>
-            </a>
+        <ul class="large-screen-menu">
+          <li>
+            <a href="exhibitions.html" class="menu-link">Exhibitions</a>
           </li>
-          <li id="explore-wrapper" class="info-wrapper">
-            <a href="explore.html" class="link-box2 inactive">EXPLORE</a>
-            <a href="explore.html">
-              <div id="explore-dropdown" class="dropdown-info">
-                <p class="header">
-                  Here you can learn more about what we can offer, whether you
-                  are a:
-                </p>
-                <!-- <hr /> -->
-                <ul class="dropdown-list">
-                  <li>Kid who would like to join one of our clubs.</li>
-                  <li>
-                    Teacher who would like to bring your students for a guided
-                    tour.
-                  </li>
-                  <li>Researcher who would like to join our team.</li>
-                </ul>
-                <!-- <p class="learn-more">Click to Learn More...</p> -->
-              </div>
-            </a>
+          <li>
+            <a href="explore.html" class="menu-link">Explore</a>
           </li>
-          <li id="get-involved-wrapper" class="info-wrapper">
-            <a href="get_involved.html" class="link-box3 inactive"
-              >GET INVOLVED</a
-            >
-            <a href="get_involved.html">
-              <div id="get-involved-dropdown" class="dropdown-info">
-                <p class="header">
-                  In order for us to create the best museum possible we need
-                  your contribution, support us through:
-                </p>
-                <!-- <hr /> -->
-                <ul class="dropdown-list">
-                  <li>Donations</li>
-                  <li>Volunteering</li>
-                  <li>Internships</li>
-                </ul>
-                <!-- <p class="learn-more">Click to learn more...</p> -->
-              </div>
-            </a>
+          <li>
+            <a href="get_involved.html" class="menu-link">Get involved</a>
           </li>
-          <li id="visit-wrapper" class="info-wrapper">
-            <a href="visit.html" class="link-box4 inactive">VISIT</a>
-            <a href="visit.html">
-              <div id="visit-dropdown" class="dropdown-info">
-                <p class="header">All you need to know about:</p>
-                <!-- <hr /> -->
-                <ul class="dropdown-list">
-                  <li>Admission</li>
-                  <li>Location</li>
-                  <li>Opening Hours</li>
-                  <li>Facilities</li>
-                </ul>
-                <!-- <p class="learn-more">Click to learn more...</p> -->
-              </div>
-            </a>
+          <li>
+            <a href="visit.html" class="menu-link">Visit</a>
           </li>
         </ul>
       </nav>
