get involved page improved

--- a/get_involved.html
+++ b/get_involved.html
@@ -135,76 +135,70 @@
   </header>
 
   <main>
-    <hgroup>
-      <h1 class="mobile">Get involved</h1>
-      <h4>You can support our museum in various ways:</h4>
-    </hgroup>
     <div class="main-wrapper">
-      <h1 class="large-screen">You can support our museum in various ways</h1>
-      <section class="main-content">
-        <div class="info-box">
-          <h2 class="info-box-heading">Donations</h2>
-          <p>
-            There are various ways you can support the museum. Donations are
-            very welcome and are an important way we keep this museum open and
-            accessible to the whole community.
-          </p>
-          <p>
-            You can also support us by donating items of interest to the
-            museum’s collections. If you have some item or collection that you
-            think others would enjoy, please let us know by contacting our
-            Collections Department and they will be able to assist you.
-          </p>
+      <div class="content-container">
+        <h1 class="main-heading">You can support our museum in various ways</h1>
+        <section class="section-container">
+          <div class="info-box" id="item-1">
+            <h2 class="info-box-heading">Donations</h2>
+            <p>
+              There are various ways you can support the museum. Donations are
+              very welcome and are an important way we keep this museum open and
+              accessible to the whole community.
+            </p>
+            <p>
+              You can also support us by donating items of interest to the
+              museum’s collections. If you have some item or collection that you
+              think others would enjoy, please let us know by contacting our
+              Collections Department and they will be able to assist you.
+            </p>
+          </div>
+          <div class="info-box" id="item-2">
+            <h2 class="info-box-heading">Volunteer</h2>
+            <p>
+              A number of people volunteer their time and effort to keep the
+              displays in good order and ready for visitors to come and enjoy.
+              Volunteering has its perks including getting to see behind the
+              scenes of a working museum, access to staff-only lectures, and a
+              monthly lunch where all staff and volunteers come together to
+              discuss ideas for future exhibits and strategies for the museum.
+            </p>
+            <p>
+              You can help volunteer in a number of different spheres. Please
+              contact us if you’d like to find out more about how you can get
+              involved.
+            </p>
+          </div>
+          <div class="info-box" id="item-3">
+            <h2 class="info-box-heading">Internships</h2>
+            <p>
+              Are you interested in working in a museum? Do you enjoy the fun
+              and excitement of sharing the wonders of nature with people?
+            </p>
+            <p>
+              Well you could be just the right person to enjoy an internship at
+              the museum.
+            </p>
+          </div>
+        </section>
+        <div class="get-in-touch" id="get-in-touch-1">
+          <p>Do you want to help us out?</p>
+          <a href="contact.html" class="button">Get in touch
+          </a>
         </div>
-        <div class="info-box">
-          <h2 class="info-box-heading">Volunteer</h2>
-          <p>
-            A number of people volunteer their time and effort to keep the
-            displays in good order and ready for visitors to come and enjoy.
-            Volunteering has its perks including getting to see behind the
-            scenes of a working museum, access to staff-only lectures, and a
-            monthly lunch where all staff and volunteers come together to
-            discuss ideas for future exhibits and strategies for the museum.
-          </p>
-          <p>
-            You can help volunteer in a number of different spheres. Please
-            contact us if you’d like to find out more about how you can get
-            involved.
-          </p>
-        </div>
-        <div class="info-box">
-          <h2 class="info-box-heading">Internships</h2>
-          <p>
-            Are you interested in working in a museum? Do you enjoy the fun
-            and excitement of sharing the wonders of nature with people?
-          </p>
-          <p>
-            Well you could be just the right person to enjoy an internship at
-            the museum.
-          </p>
-        </div>
-      </section>
-      <div class="get-in-touch">
-        <p>Do you want to help us out?</p>
-        <a href="contact.html">
-          <p class="button">GET IN TOUCH</p>
-        </a>
       </div>
-    </div>
-    <div class="bottom-section">
       <div class="newsletter-wrapper">
         <div class="blur">
           <section class="newsletter">
             <label for="newsletter">
-              Sign up to our Newsletter and be the first to know about Our
-              exciting New stuff:
+              Sign up to our <em>newsletter</em> and be the first to know about our
+              exciting <em>new stuff</em>:
             </label>
             <div class="newsletter-success">
               Welcome! Please check your inbox
             </div>
             <form class="newsletter">
-              <input id="newsletter" type="text" name="email" placeholder="YOUR EMAIL" />
-
+              <input id="newsletter" type="text" name="email" placeholder="your e-mail" />
               <input id="sign-up" type="submit" name="subscribe" value="SIGN UP" />
             </form>
             <p id="newsletter-error" class="error-message">
@@ -214,7 +208,6 @@
         </div>
       </div>
     </div>
-
     <div class="fading-background_1"></div>
     <div class="fading-background_2"></div>
   </main>
