--- a/explore.html
+++ b/explore.html
@@ -139,8 +139,8 @@
   <main>
     <div class="main-wrapper">
       <div class="content-container">
-        <h1>More To Explore</h1>
-        <section class="kids">
+        <h1 class="main-heading">More To Explore</h1>
+        <section class="section-container">
           <div class="blue info-box" id="item-1">
             <h2 class="info-box-heading">For Kids</h2>
             <p>
@@ -186,7 +186,7 @@
           <a href="contact.html" class="button">Get in touch
           </a>
         </div>
-        <section class="teachers">
+        <section class="section-container">
           <div class="info-box" id="item-4">
             <h3 class="info-box-heading">For Teachers</h3>
             <p>
@@ -217,9 +217,9 @@
               the country.
             </p>
           </div>
-          <figure id="item-6">
+          <div class="image-box" id="item-6">
             <!-- <img src="images\researcher-cartoon_large.jpg" alt="" /> -->
-          </figure>
+          </div>
         </section>
         <div class="get-in-touch" id="get-in-touch-2">
           <p>Are you a teacher or a researcher?</p>
