visit page improved

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -392,15 +392,14 @@
         <div class="blur">
           <section class="newsletter">
             <label for="newsletter">
-              Sign up to our Newsletter and be the first to know about Our
-              exciting New stuff:
+              Sign up to our <em>newsletter</em> and be the first to know about our
+              exciting <em>new stuff</em>:
             </label>
             <div class="newsletter-success">
               Welcome! Please check your inbox
             </div>
             <form class="newsletter">
-              <input id="newsletter" type="text" name="email" placeholder="YOUR EMAIL" />
-
+              <input id="newsletter" type="text" name="email" placeholder="your e-mail" />
               <input id="sign-up" type="submit" name="subscribe" value="SIGN UP" />
             </form>
             <p id="newsletter-error" class="error-message">
