--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
   <main>
     <div class="background-container">
-      <div class="main-wrapper">
+      <div class="main-wrappe">
         <section class="main-content">
           <hgroup>
             <h1>EXPLORE 1000+ EXHIBITIONS</h1>
